--- a/nx.json
+++ b/nx.json
@@ -68,7 +68,8 @@
     },
     "@nx/angular:library": {
       "linter": "eslint",
-      "unitTestRunner": "jest"
+      "unitTestRunner": "jest",
+      "buildable": true
     },
     "@nx/angular:component": {
       "style": "scss"
