feat: add home library

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@conf-demo/design-system": ["libs/design-system/src/index.ts"],
+      "@conf-demo/home": ["libs/home/src/index.ts"],
       "@conf-demo/ui-state": ["libs/ui-state/src/index.ts"]
     }
   },
