--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,8 +15,9 @@ jobs:
       - uses: nrwl/nx-set-shas@v3
         with:
           main-branch-name: ${{ github.base_ref || github.ref_name }}
+      - run: npx nx-cloud start-agent
       - run: npm ci
       - run: npx nx format:check
-      - run: npx nx affected -t lint --parallel=3
-      - run: npx nx affected -t test --parallel=3 --configuration=ci
-      - run: npx nx affected -t build --parallel=3
+      - run: npx nx affected --targets=lint,build
+      - run: npx nx affected -t test --configuration=ci
+      - run: npx nx-cloud stop-all-agents
