--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           main-branch-name: ${{ github.base_ref || github.ref_name }}
       - run: npm ci
-      - run: npx nx-cloud start-agent
+      - run: npx nx-cloud start-ci-run
       - run: npx nx format:check
       - run: npx nx affected --targets=lint,build
       - run: npx nx affected -t test --configuration=ci
