--- a/libs/home/project.json
+++ b/libs/home/project.json
@@ -3,7 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/home/src",
   "prefix": "conf-demo",
-  "tags": [],
+  "tags": ["type:libs:home"],
   "projectType": "library",
   "targets": {
     "build": {
