--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,8 +13,8 @@
             "allow": [],
             "depConstraints": [
               {
-                "sourceTag": "*",
-                "onlyDependOnLibsWithTags": ["*"]
+                "sourceTag": "type:app:hello-world",
+                "onlyDependOnLibsWithTags": ["type:libs:home"]
               }
             ]
           }
