--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "@angular/animations": "~16.0.0",
+    "@angular/animations": "16.0.3",
     "@angular/cdk": "^16.0.1",
-    "@angular/common": "~16.0.0",
-    "@angular/compiler": "~16.0.0",
-    "@angular/core": "~16.0.0",
-    "@angular/forms": "~16.0.0",
-    "@angular/platform-browser": "~16.0.0",
-    "@angular/platform-browser-dynamic": "~16.0.0",
-    "@angular/router": "~16.0.0",
+    "@angular/common": "16.0.3",
+    "@angular/compiler": "16.0.3",
+    "@angular/core": "16.0.3",
+    "@angular/forms": "16.0.3",
+    "@angular/platform-browser": "16.0.3",
+    "@angular/platform-browser-dynamic": "16.0.3",
+    "@angular/router": "16.0.3",
     "@nx/angular": "16.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -27,8 +27,8 @@
     "@angular-eslint/eslint-plugin-template": "~16.0.0",
     "@angular-eslint/template-parser": "~16.0.0",
     "@angular/cli": "~16.0.0",
-    "@angular/compiler-cli": "~16.0.0",
-    "@angular/language-service": "~16.0.0",
+    "@angular/compiler-cli": "16.0.3",
+    "@angular/language-service": "16.0.3",
     "@nx/cypress": "16.2.1",
     "@nx/eslint-plugin": "16.2.1",
     "@nx/jest": "16.2.1",
@@ -61,3 +61,4 @@
     "typescript": "~5.0.2"
   }
 }
+
