--- a/package.json
+++ b/package.json
@@ -5,30 +5,30 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "@angular/animations": "16.0.3",
-    "@angular/cdk": "^16.0.1",
-    "@angular/common": "16.0.3",
-    "@angular/compiler": "16.0.3",
-    "@angular/core": "16.0.3",
-    "@angular/forms": "16.0.3",
-    "@angular/platform-browser": "16.0.3",
-    "@angular/platform-browser-dynamic": "16.0.3",
-    "@angular/router": "16.0.3",
-    "@nx/angular": "16.2.1",
+    "@angular/animations": "16.2.11",
+    "@angular/cdk": "16.2.10",
+    "@angular/common": "16.2.11",
+    "@angular/compiler": "16.2.11",
+    "@angular/core": "16.2.11",
+    "@angular/forms": "16.2.11",
+    "@angular/platform-browser": "16.2.11",
+    "@angular/platform-browser-dynamic": "16.2.11",
+    "@angular/router": "16.2.11",
+    "@nx/angular": "17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~16.0.0",
-    "@angular-devkit/core": "~16.0.0",
-    "@angular-devkit/schematics": "~16.0.0",
+    "@angular-devkit/build-angular": "16.2.8",
+    "@angular-devkit/core": "16.2.8",
+    "@angular-devkit/schematics": "16.2.8",
     "@angular-eslint/eslint-plugin": "~16.0.0",
     "@angular-eslint/eslint-plugin-template": "~16.0.0",
     "@angular-eslint/template-parser": "~16.0.0",
     "@angular/cli": "~16.0.0",
-    "@angular/compiler-cli": "16.0.3",
-    "@angular/language-service": "16.0.3",
+    "@angular/compiler-cli": "16.2.11",
+    "@angular/language-service": "16.2.11",
     "@nx/cypress": "16.2.1",
     "@nx/eslint-plugin": "16.2.1",
     "@nx/jest": "16.2.1",
@@ -36,7 +36,7 @@
     "@nx/linter": "16.2.1",
     "@nx/web": "16.2.1",
     "@nx/workspace": "16.2.1",
-    "@schematics/angular": "~16.0.0",
+    "@schematics/angular": "16.2.8",
     "@types/jest": "^29.4.0",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
@@ -48,7 +48,7 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-preset-angular": "~13.1.0",
-    "ng-packagr": "~16.0.0",
+    "ng-packagr": "16.2.3",
     "nx": "16.2.1",
     "nx-cloud": "latest",
     "postcss": "^8.4.5",
