--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,12 @@
               {
                 "sourceTag": "type:app:hello-world",
                 "onlyDependOnLibsWithTags": ["type:libs:home"]
+              },
+              {
+                "sourceTag": "type:libs:ui-lib",
+                "onlyDependOnLibsWithTags": ["type:libs:design-system"]
               }
+
             ]
           }
         ]
