--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,7 +17,8 @@
     "paths": {
       "@conf-demo/design-system": ["libs/design-system/src/index.ts"],
       "@conf-demo/home": ["libs/home/src/index.ts"],
-      "@conf-demo/ui-state": ["libs/ui-state/src/index.ts"]
+      "@conf-demo/ui-state": ["libs/ui-state/src/index.ts"],
+      "@santosh/ui-lib": ["libs/ui-lib/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
