--- a/libs/home/project.json
+++ b/libs/home/project.json
@@ -10,8 +10,7 @@
       "executor": "@nx/angular:ng-packagr-lite",
       "outputs": ["{workspaceRoot}/dist/{projectRoot}"],
       "options": {
-        "project": "libs/home/ng-package.json",
-        "updateBuildableProjectDepsInPackageJson": true
+        "project": "libs/home/ng-package.json"
       },
       "configurations": {
         "production": {
