--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "@angular/language-service": "16.2.11",
     "@nx/cypress": "16.2.1",
     "@nx/eslint-plugin": "16.2.1",
-    "@nx/jest": "16.2.1",
-    "@nx/js": "16.2.1",
+    "@nx/jest": "17.0.2",
+    "@nx/js": "17.0.2",
     "@nx/linter": "16.2.1",
     "@nx/web": "16.2.1",
     "@nx/workspace": "16.2.1",
     "@schematics/angular": "16.2.8",
+    "@swc-node/register": "~1.6.7",
+    "@swc/core": "~1.3.85",
     "@types/jest": "^29.4.0",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
@@ -48,6 +50,7 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-preset-angular": "~13.1.0",
+    "jsonc-eslint-parser": "^2.1.0",
     "ng-packagr": "16.2.3",
     "nx": "16.2.1",
     "nx-cloud": "latest",
